// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css_macro pick css 1`] = `
""use strict";

var _css_a = require("./css_a");
const ButtonStyle = "styled-20b58232";

// class: GlobalButton
let ButtonStyle2 = "GlobalButton";
var ButtonStyle3 = "styled-2236c04d";

// Global style

const obj = {
  y: "styled-b2319bc3"
};
obj.x = "styled-a5e9a065";
function Hi() {
  const ButtonStyle = "styled-dc648c0d";
}"
`;

exports[`css_macro pick css 2`] = `
".styled-20b58232 {
                color: #000;
            }
.GlobalButton {
                color: #000;
            }
.styled-2236c04d {
                color: #000;
            }

                .Group {
                    flow-children: right;
                    .styled-20b58232 {
                        flow-children: right;
                    }
                    .GlobalButton {
                        flow-children: right;
                    }
                    .styled-2236c04d {
                        flow-children: right;
                    }
                    .styled-49cba726 {
                        flow-children: right;
                    }
                }
            .styled-b2319bc3 {y: 0px;}
.styled-a5e9a065 {
                x: 0px;
            }
.styled-dc648c0d {
                    color: #000;
                }
"
`;

exports[`css_macro pick css 3`] = `
{
  "css_a.ts": ".styled-49cba726 {
    color: #000;
}
",
  "css_macro.test.ts": ".styled-20b58232 {
                color: #000;
            }
.GlobalButton {
                color: #000;
            }
.styled-2236c04d {
                color: #000;
            }

                .Group {
                    flow-children: right;
                    .styled-20b58232 {
                        flow-children: right;
                    }
                    .GlobalButton {
                        flow-children: right;
                    }
                    .styled-2236c04d {
                        flow-children: right;
                    }
                    .styled-49cba726 {
                        flow-children: right;
                    }
                }
            .styled-b2319bc3 {y: 0px;}
.styled-a5e9a065 {
                x: 0px;
            }
.styled-dc648c0d {
                    color: #000;
                }
",
}
`;
